 2013-03-06 14:30  dimitr 
   M builds/win32/msvc8/firebird2.vsprops
   M builds/win32/msvc9/btyacc.vcproj
   M builds/win32/msvc9/firebird2.vsprops
   M extern/icu/source/allinone/firebird2intl.vsprops
An ultimate solution for the CRT warnings targeted at both native and external (ICU, BTYACC) modules. Inspired by the ICU-only patch contributed by Dmitry Kovalenko.

 2013-03-06 11:33  alexpeshkoff 
   M src/remote/inet.cpp
Fixed CORE-4058

 2013-03-04 15:18  alexpeshkoff 
   M configure.in
Minimum fix for CORE-4031: make install wrong under Debian Ubuntu 64

 2013-03-01 13:50  alexpeshkoff 
   M src/isql/InputDevices.cpp
   M src/isql/InputDevices.h
   M src/isql/isql.epp
Postfix for CORE-3990

 2013-03-01 11:56  alexpeshkoff 
   M src/isql/isql.epp
Backported fix for CORE-3990: Fix broken EDIT in isql

 2013-02-28 16:24  alexpeshkoff 
   M src/jrd/blb.cpp
   M src/jrd/exe.cpp
   M src/jrd/tra.cpp
   M src/jrd/tra.h
Postfix for CORE-3908: Engine leaks memory and crashes when lot of autonomous transactions have been started and finished

 2013-02-27 14:49  alexpeshkoff 
   M src/jrd/tra.cpp
   M src/jrd/tra.h
Backported fix for CORE-3908: Engine leaks memory and crashes when lot of autonomous transactions have been started and finished

 2013-02-26 11:58  alexpeshkoff 
   M src/jrd/UserManagement.cpp
Fixed CORE-4055: Dialect is not set in internal connections to security database

 2013-02-26 11:13  hvlad 
   M src/jrd/extds/ExtDS.cpp
Fixed bug CORE-4054 : role not passed on external execute stmt

 2013-02-25 10:05  hvlad 
   M src/jrd/sort.cpp
Ported fix for bug CORE-4051 : Memory leak when sorting big records

 2013-02-14 04:29  robocop 
   M src/jrd/jrd.cpp
   M src/jrd/jrd.h
Misc.

 2013-01-30 11:23  dimitr 
   M src/jrd/Database.h
Fixed the recently introduced deadlock. This is the simplest possible patch, other solutions are possible.

 2013-01-25 12:37  dimitr 
   M src/jrd/extds/ExtDS.cpp
   M src/jrd/extds/ExtDS.h
   M src/jrd/extds/InternalDS.cpp